My account print order align fix

--- a/skin/frontend/mariatash/redesign/css/redesign.css
+++ b/skin/frontend/mariatash/redesign/css/redesign.css
@@ -4941,3 +4941,6 @@ a.product-video-link:hover div.product-video-play-icon {
 	padding-top: 0px;
 	font-size: 18px;
 }
+.my-account .link-print{
+	margin-left:0px;
+}
